--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
+    "react-barcode": "^1.6.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
